--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <input type="range" id="slider">
         </div>
 
-        <script src="Point.js"></script>
-        <script src="gift wrapping.js"></script>
-        <script src="utils.js"></script>
+        <script src="src/Point.js"></script>
+        <script src="src/gift wrapping.js"></script>
+        <script src="src/utils.js"></script>
 
-        <script src="main.js"></script>
+        <script src="src/main.js"></script>
 
     </body>
 </html> 
